--- a/index.html
+++ b/index.html
@@ -142,7 +142,10 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/cGQwDD2d6jY5mFWS7"
+            <a
+              href="https://goo.gl/maps/cGQwDD2d6jY5mFWS7"
+              target="_blank"
+              rel="noopener nofollow noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
