--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <ul>
           <li>
             <img
-              src="/images/box-1.jpg"
+              src="./images/box-1.jpg"
               alt="Написание кода"
               width="370"
               height="294"
@@ -74,7 +74,7 @@
           </li>
           <li>
             <img
-              src="/images/box-2.jpg"
+              src="./images/box-2.jpg"
               alt="Работа с телефоном"
               width="370"
               height="294"
@@ -82,7 +82,7 @@
           </li>
           <li>
             <img
-              src="/images/box-3.jpg"
+              src="./images/box-3.jpg"
               alt="Выбор цвета"
               width="370"
               height="294"
@@ -95,7 +95,7 @@
         <ul>
           <li>
             <img
-              src="/images/team-1.jpg"
+              src="./images/team-1.jpg"
               alt="Наша команда"
               width="270"
               height="260"
@@ -105,7 +105,7 @@
           </li>
           <li>
             <img
-              src="/images/team-2.jpg"
+              src="./images/team-2.jpg"
               alt="Наша команда"
               width="270"
               height="260"
@@ -115,7 +115,7 @@
           </li>
           <li>
             <img
-              src="/images/team-3.jpg"
+              src="./images/team-3.jpg"
               alt="Наша команда"
               width="270"
               height="260"
@@ -125,7 +125,7 @@
           </li>
           <li>
             <img
-              src="/images/team-4.jpg"
+              src="./images/team-4.jpg"
               alt="Наша команда"
               width="270"
               height="260"
