headings and footer
changed the headings and added a link in the footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-
     <main>
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
@@ -32,28 +31,28 @@
         <h2 hidden>Особенности</h2>
         <ul>
           <li>
-            <p>Внимание к деталям</p>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <p>Пунктуальность</p>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <p>Планирование</p>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <p>Современные технологии</p>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -138,7 +137,7 @@
     </main>
 
     <footer>
-      <p>WebStudio</p>
+      <a href="">WebStudio</a>
       <address>
         <ul>
           <li>
